--- a/Client-ECommerce/public/index.html
+++ b/Client-ECommerce/public/index.html
@@ -24,7 +24,7 @@
                 font-family: 'Urbanist', sans-serif;
             }
         </style>
-        <title>React App</title>
+        <title>Figures Shop</title>
     </head>
 
     <body>
